--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam aliquid, quidem cum numquam, quibusdam excepturi neque, fugiat consectetur optio maxime quae natus inventore ex eligendi a temporibus laborum accusantium! Placeat.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    
+</body>
+</html>
