--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo dolor laboriosam voluptates voluptatem similique eveniet quasi doloremque, alias beatae voluptatibus! Quibusdam officia vero quod. Aut explicabo blanditiis sed earum maxime.</p>
 </body>
 </html>
